# astronomer-airflow-version-check

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  airflow.cfg  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  simple_auth_manager_passwords.json.generated
.circleci/: config.yml
astronomer/airflow/version_check/: alembic.ini  models.py  plugin.py  update_checks.py  version_compat.py
astronomer/airflow/version_check/migrations/: env.py  script.py.mako
astronomer/airflow/version_check/migrations/versions/: b5ad49d1f9b4_add_placeholder_migration.py  c7f8e9a2b3d4_create_airflow3_tables.py  c7f8e9a2b3d4_create_airflow3_tables_and_drop_airflow2.py
astronomer/airflow/version_check/models/: db.py  manager.py
astronomer/airflow/version_check/static/: update-notice.css  update-notice.js
astronomer/airflow/version_check/templates/: astro-baselayout.html  update-available.html
astronomer/airflow/version_check/version_api/: app.py  datamodels.py  routes.py
astronomer/airflow/version_check/www/: index.html  package.json  testsSetup.ts  tsconfig.app.json  tsconfig.json  tsconfig.lib.json  vite.config.ts
astronomer/airflow/version_check/www/src/: dev.tsx  main.tsx  theme.ts
astronomer/airflow/version_check/www/src/api/: versionCheck.ts
astronomer/airflow/version_check/www/src/components/: DismissButton.tsx  WarningBanner.tsx
astronomer/airflow/version_check/www/src/res/: README.md
tests/: conftest.py  test_plugin.py  test_runtime_update_checks.py  test_update_checks.py
