[build-system]
requires = ["setuptools", "wheel", "pytest-runner", "pytest-env"]

[tool.ruff]
line-length = 119
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["astronomer"]
