[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project]
name = "astronomer-airflow-version-check"
version = "3.0.0"
description = "Periodically check for new releases of Astronomer Runtime"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "astronomerio", email = "humans@astronomer.io" }]
requires-python = ">=3.11"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Apache Airflow",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "apache-airflow>=3.1.5",
    "distro~=1.5",
    "lazy-object-proxy~=1.3",
    "packaging>=20.0",
    "semver~=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-env",
    "pytest-flake8",
    "pytest-flask",
    "pytest-mock",
    "time_machine",
    "ruff",
]

[project.entry-points."airflow.plugins"]
astronomer_version_check = "astronomer.airflow.version_check.plugin:AstronomerVersionCheckPlugin"


[project.urls]
Homepage = "https://github.com/astronomer/astronomer-airflow-version-check"
Changelog = "https://github.com/astronomer/astronomer-airflow-version-check/blob/master/CHANGELOG.md"

[tool.uv]
required-version = ">=0.9.17"

[tool.uv.build-backend]
module-root = ""
module-name = "astronomer.airflow.version_check"
source-exclude = [
    "/build",
    "/dist",
    "/astronomer_airflow_version_check.egg-info",
    "/astronomer/airflow/version_check/alembic.ini",
    "/astronomer/airflow/version_check/migrations/script.py.mako",
]

[tool.pytest.ini_options]
addopts = "--tb=short"
junit_family = "xunit2"
required_plugins = ["pytest-env"]
env = [
    "AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=sqlite:////tmp/airflow.db",
    "AIRFLOW_HOME=/tmp/airflow",
    "AIRFLOW__ASTRONOMER__UPDATE_URL=https://updates.astronomer.io/astronomer-runtime",
]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = ["astronomer"]
